[package]
name = "chessengine-wasm"
version = "1.0.0"
authors = ["easychessanimations <chessbotroulette@gmail.com>"]
description = "Chess engine Rust WASM."
keywords = ["chess", "engine", "rust", "wasm"]
license = "MIT"
repository = "https://github.com/easychessanimations/chessengine-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
